fix table sizing when displayed on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -556,7 +556,7 @@
 		
 			table.default
 			{
-				width: 100%;
+				width: 99%;
 				border-collapse: collapse;
 			}
 
